<resources>
    <string name="app_name">Activity 5</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="location_status">Location Status</string>
    <string name="location_permission_status">Location Permission status:</string>
    <string name="camera_permission_status">Camera Permission status:</string>
    <string name="click_the_button_below_to_access_permissions">Click the button below to access permissions</string>
    <string name="microphone">Microphone</string>
    <string name="microphone_permission_status">Microphone Permission status:</string>
</resources>